# claude-cli-protocol

./: .gitignore  .goreleaser.yml  README.md  analyze_subagent_logs.py  pyproject.toml
.github/workflows/: release.yml
Formula/: claude-cli-tools.rb
codex-review/: .gitignore  Makefile  go.mod
codex-review/cmd/: main.go
codex-review/reviewer/: reviewer.go  reviewer_test.go
docs/: PROTOCOL_SPECIFICATION.md
docs/schemas/: control-protocol.schema.json  hooks.schema.json
experiments/custom_tool_trace/: CUSTOM_TOOL_PROTOCOL.md  capture_trace.py
experiments/plan_mode_analysis/: ANALYSIS.md  go.mod  main.go
multiagent/: ARCHITECTURE.md  IMPLEMENTATION.md  README.md  go.mod
multiagent/agent/: agent.go  config.go  config_test.go  session.go  session_test.go
multiagent/checkpoint/: checkpoint.go  checkpoint_test.go  doc.go  live_test.go
multiagent/e2e/: doc.go  swarm_mock_test.go
multiagent/integration/: doc.go  orchestrator_planner_test.go  planner_subagents_test.go  session_test.go  streaming_subagent_test.go
multiagent/lifecycle/: doc.go  lifecycle_test.go
multiagent/orchestrator/: orchestrator.go  orchestrator_test.go  prompts.go
multiagent/planner/: mcp_tools.go  mcp_tools_test.go  planner.go  (+5 more)
protocol/: README.md
subagents-logs/: 2fbd084c-4203-4dcb-829b-c1958c90e090.jsonl  ANALYSIS.md
yoloplanner/: Makefile  go.mod  planner.go  planner_test.go  renderer.go  test_build.sh
yoloswe/: Makefile  README.md  builder.go  builder_test.go  go.mod  integration_test.go  runtime_test.go  swe.go  swe_test.go  validation.go  validation_test.go
(+199 files in other folders)
