[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-cli-protocol"
version = "0.1.0"
description = "Protocol documentation generator for the Claude CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[project.scripts]
generate-protocol-docs = "claude_cli_protocol.generate:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
